Add delete function, Fix bugs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<form id="form">
 		<center>
 			<input type="text" placeholder="Input your text" id="text-input"><br>
-			<input type="button" value="Add" onclick="addToUl();" id="button">
+			<input type="button" value="Add" id="button">
 		</center>
 	</form>
 	<center>
