Add sort by fields

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 			<input type="button" value="Add" id="button">
 		</center>
 	</form>
+	<form id="sort-form">
+		<p id="text-line">Sort by:</p>
+			<input type="radio" name="sort-radiobutton" value="ascnumber" id="number-sort" checked>
+			<label for="number-sort">Number</label>
+			<input type="radio" name="sort-radiobutton" value="descnumber" id="rnumber-sort">
+			<label for="rnumber-sort">Reverse number</label>
+			<input type="radio" name="sort-radiobutton" value="asc" id="alphabet-sort">
+			<label for="alphabet-sort">Alphabet</label>
+			<input type="radio" name="sort-radiobutton" value="desc" id="ralphabet-sort">
+			<label for="ralphabet-sort">Reverse alphabet</label>
+	</form>	
 	<center>
 		<ul id="list-item"></ul>
 	</center>
