Change index.html, script.js

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 	</form>
 	<form id="sort-form">
 		<p id="text-line">Sort by:</p>
-			<input type="radio" name="sort-radiobutton" value="ascnumber" id="number-sort" checked>
+			<input type="radio" class="asc" name="sort-radiobutton" value="id" id="number-sort" checked>
 			<label for="number-sort">Number</label>
-			<input type="radio" name="sort-radiobutton" value="descnumber" id="rnumber-sort">
+			<input type="radio" class="desc" name="sort-radiobutton" value="id" id="rnumber-sort">
 			<label for="rnumber-sort">Reverse number</label>
-			<input type="radio" name="sort-radiobutton" value="asc" id="alphabet-sort">
+			<input type="radio" class="asc" name="sort-radiobutton" value="value" id="alphabet-sort">
 			<label for="alphabet-sort">Alphabet</label>
-			<input type="radio" name="sort-radiobutton" value="desc" id="ralphabet-sort">
+			<input type="radio" class="desc" name="sort-radiobutton" value="value" id="ralphabet-sort">
 			<label for="ralphabet-sort">Reverse alphabet</label>
 	</form>	
 	<center>
